...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill,TextFields,LabelFor">

    <EditText
        android:id="@+id/calcValue"
        style="@style/value_style_sw330"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
...
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcResult" />

    <TextView
        android:id="@+id/calcResult"
        style="@style/value_style_sw330"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
